<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/title_calibrate"
        android:textSize="64sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/circularButton1"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/calibration_near"
        android:textSize="28sp" />

    <com.devmobility.killerpresence.circleprogress.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_cornerRadius="48dp"
        app:cpb_selectorComplete="@drawable/complete_selector"
        app:cpb_selectorError="@drawable/error_selector"
        app:cpb_selectorIdle="@drawable/idle_selector"
        app:cpb_textComplete="@string/calibration_end"
        app:cpb_textError="Error"
        app:cpb_textIdle="@string/calibration_start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circularButton1"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/calibration_tip"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textview_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textSize="28sp" />

</RelativeLayout>